--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "x",
+	"name": "website-ap",
 	"version": "1.0.0",
-	"description": "x",
+	"description": "blogging website for ap",
 	"main": "index.js",
 	"scripts": {
 		"client": "webpack-dev-server --config webpack.dev.js --open",
@@ -25,6 +25,7 @@
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.14.1",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
+		"postcss-loader": "^3.0.0",
 		"sass-loader": "^9.0.2",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.43.0",
