--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"babel-polyfill": "^6.26.0",
 		"draft-js": "^0.11.7",
 		"firebase": "^7.18.0",
+		"html-react-parser": "^0.13.0",
 		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
